--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
     	"phpmailer/phpmailer": "^6.5",
     	"slim/slim":"2.0",
-    	"rain/raintpl":"3.0.0"
+    	"rain/raintpl":"3.0.0",
+        "spatie/array-to-xml":"2.17.1"
     },
     "autoload": {
         "psr-4": {
